--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "fs-extra": "3.0.1",
+    "gh-pages": "^2.1.1",
     "object-assign": "4.1.1",
     "promise": "8.0.1",
     "raf": "3.4.0",
@@ -22,12 +23,13 @@
     "url-loader": "0.6.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "make-standard": "eslint --fix ./src;exit 0",
-    "nag": "eslint ./src;exit 0",
-    "deploy": "sh scripts/deploy.sh"
+    "nag": "eslint ./src;exit 0"
   },
   "jest": {
     "collectCoverageFrom": [
